# thesis-trial

./: README.md  app.py  pyproject.toml  requirements.txt
