[tool.poetry]
name = "repl_python3_thesis-trial"
version = "0.1.0"
description = ""
authors = ["JannaWong <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
streamlit = "^1.8.1"
yfinance = "^0.1.70"
plotly = "^5.6.0"
statsmodels = "^0.13.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
